--- a/projects/maxims/assets/css/maxim_style_eight.css
+++ b/projects/maxims/assets/css/maxim_style_eight.css
@@ -1,7 +1,6 @@
 * {
     padding: 0px;
     margin: 0px;
-    background-color: black;
 }
 
 body {
@@ -10,69 +9,116 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: black;
 }
 
-#background{
-    animation-name: ambient;
-    animation-iteration-count: infinite;
-    animation-duration: 1s;
-    animation-direction: alternate;
-}
-
-@keyframes ambient {
-    0% {
-        
-    }
-}
-
-.row {
-    margin: 10px;
-    padding: 25px;
-    display: inline-block;
+a {
+    text-decoration: none;
+    font-family: sans-serif;
+    color: #024794;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: static;
 }
 
 p {
-    font-size: 54px;
     color: ghostwhite;
-    font-family: "Helvetica", serif;
-    background-color: transparent;
+    font-family: "Fira Mono", sans-serif;
     text-align: center;
+    background-color: black;
 }
 
-span {
-     display: inline-block;
- }
 
-#float {
-    animation-name: float;
-    animation-iteration-count: infinite;
-    animation-duration: .3s;
-    animation-direction: alternate;
-    animation-timing-function: ease-in-out;
+div {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
-@keyframes float {
-     0% {
-            transform: rotate3d(50, -10, -10, 10deg)
+.row {
+    width: 90%;
+}
+
+.flow {
+    animation: text-shadow .5s linear infinite alternate;
+    font-size: 56px;
+    text-align: center;
+    padding-top: 15vh;
+    background-color: black;
+    z-index: 1;
+}
+
+.row:hover .flow {
+    opacity: .10;
+}
+
+
+.wait {
+    display: block;
+    font-size: 24px;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    bottom: 500;
+    right: 500;
+    width: 1000px;
+    z-index: 0;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+@keyframes text-shadow {
+    0% {
+        transform: translateY(0);
+        text-shadow:
+            0 0 0 #0c2ffb,
+            0 0 0 #2cfcfd,
+            0 0 0 #fb203b,
+            0 0 0 #fefc4b;
     }
-    100% {
-            transform: rotate3d(50, 10, 10, 10deg)
+
+    20% {
+        color: azure;
+        transform: translateX(-1px);
+        text-shadow:
+            0 12px 0 #2cfcfd,
+            0 -5px 0 #fb203b,
+            0 -6px 10 #fefc4b;
+    }
+
+    40% {
+        transform: translateY(1px);
+        text-shadow:
+            0 -12px 0 #2cfcfd,
+            0 8px 10 #fb203b,
+            0 5px 0 #fefc4b;
+    }
+
+    60% {
+        transform: translateX(1px);
+        text-shadow:
+            0 2px 0 #2cfcfd,
+            0 -2px 0 #fb203b,
+            0 -2px 0 #fefc4b;
+    }
+
+    80% {
+        transform: translateY(-1px);
+        text-shadow:
+            0 0 0 #2cfcfd,
+            0 0 0 #fb203b,
+            0 0 0 #fefc4b;
     }
 }
 
-#boo {
-    animation: boo .2s ease-in-out alternate infinite;
-    background-color: transparent;
-}
 
-@keyframes boo {
-    from {
-        transform: scale(1.0);
-        color: ghostwhite;
-    }
-    to {
-        transform: scale(.9);
-        color: red;
-    }
+span {
+    display: inline-block;
 }
