--- a/projects/maxims/assets/css/maxim_style_four.css
+++ b/projects/maxims/assets/css/maxim_style_four.css
@@ -1,7 +1,6 @@
 * {
     padding: 0px;
     margin: 0px;
-    background-color: black;
 }
 
 body {
@@ -10,9 +9,30 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: black;
 }
 
-#background{
+a {
+    text-decoration: none;
+    font-family: sans-serif;
+    color: orange;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: static;
+}
+
+div {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#background {
     animation-name: ;
     animation-iteration-count: infinite;
     animation-duration: 1s;
@@ -26,55 +46,53 @@ body {
 }
 
 p {
-    font-size: 54px;
+    font-size: 72px;
     color: ghostwhite;
     font-family: "Rockwell", sans-serif;
     background-color: transparent;
     text-align: center;
 }
 
-.flow {
-    animation: flow;
-    animation-iteration-count: infinite;
-    animation-duration: 3s;
-    animation-direction: alternate;
-    transition: ease;
+.float {
+    animation: float .3s ease-in-out infinite alternate;
+    justify-content: center;
+    background-color: transparent;
+    display: inline-block;
+    position: absolute;
+    margin-left: -72px;
 }
 
-@keyframes flow {
+@keyframes float {
     0% {
-        transform: translatey(0px);
-	}
-	50% {
-		transform: translatey(-20px);
-	}
-	100% {
-		transform: translatey(-10px);
-	}
+        transform: rotateX(5deg) scale(1.0);
+        color: gold;
+    }
+
+    100% {
+        transform: rotateX(-5deg) scale(1.1);
+        
+    }
 }
 
 span {
-     display: inline-block;
- }
-
-.rich {
-    animation: rich;
-    animation-iteration-count: infinite;
-    animation-duration: 1s;
-    animation-direction: alternate;
-    
+    display: inline-block;
 }
 
-@keyframes rich{
+#space {
+    margin: 28px;
+}
+
+.money {
+    animation: rich .5s ease infinite alternate;
+    position: relative;
+}
+
+@keyframes rich {
     0% {
-        color: gold;
+        color: green;
     }
-    50%{
-        font-size: 64px;
-        animation-delay: 1s;
-    }
-    
+
     100% {
-        color: lightgoldenrodyellow;
+        color: gold;
     }
 }
