--- a/projects/maxims/assets/css/maxim_style_nine.css
+++ b/projects/maxims/assets/css/maxim_style_nine.css
@@ -1,7 +1,6 @@
 * {
     padding: 0px;
     margin: 0px;
-    background-color: black;
 }
 
 body {
@@ -10,30 +9,41 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    justify-content: center;
+    background: radial-gradient(snow, white);
+    background-size: 100% 100%;
 }
 
-#background{
-    animation-name: ambient;
-    animation-iteration-count: infinite;
-    animation-duration: 1s;
-    animation-direction: alternate;
+a {
+    text-decoration: none;
+    font-family: sans-serif;
+    color: orange;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: static;
 }
 
-@keyframes ambient {
-    0% {
-        
-    }
+div {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .row {
     margin: 10px;
-    padding: 25px;
-    display: inline-block;
+    padding: 20px;
+    text-align: center;
 }
 
 p {
-    font-size: 54px;
-    color: ghostwhite;
+    font-size: 84px;
+    line-height: 160px;
+    color: black;
     font-family: "Rockwell", sans-serif;
     background-color: transparent;
     text-align: center;
@@ -43,7 +53,7 @@ span {
      display: inline-block;
  }
 
-#float {
+.float {
     animation-name: float;
     animation-iteration-count: infinite;
     animation-duration: .3s;
@@ -61,18 +71,67 @@ span {
     }
 }
 
-#boo {
-    animation: boo .2s ease-in-out alternate infinite;
+.float:hover {
+    animation-name: spin;
+    animation-duration: 3s;
+    animation-timing-function: ease;
+    transition: all .2s alternate;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    
+    100% {
+        transform: rotate(720deg);
+    }
+}
+
+
+.neigh {
+    animation: neigh 3s ease-in alternate infinite;
+    animation-delay: 2s;
     background-color: transparent;
 }
 
-@keyframes boo {
-    from {
+@keyframes neigh {
+    0% {
         transform: scale(1.0);
-        color: ghostwhite;
+        color: black;
     }
-    to {
-        transform: scale(.9);
+    50% {
+        transform: scale(0.98);
+        color: saddlebrown;
+    }
+    90% {
+        transform: scale(1.2) rotate(-5deg);
+        color: black;
+    }
+    100% {
+        transform: scale(1.1) rotate(720deg);
         color: red;
+    }
+}
+
+.bounce {
+    animation-name: bounce;
+    animation-iteration-count: infinite;
+    animation-duration: .2s;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateY(0vh);
+    }
+
+    30% {
+        transform: translateY(.3vh);
+    }
+
+    100% {
+        transform: translateY(1vh);
     }
 }
