--- a/projects/maxims/assets/css/maxim_style_seven.css
+++ b/projects/maxims/assets/css/maxim_style_seven.css
@@ -1,7 +1,6 @@
 * {
     padding: 0px;
-    margin: 30px;
-    background-color: black;
+    margin: 0px;
 }
 
 body {
@@ -10,30 +9,121 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: black;
 }
 
+a {
+    text-decoration: none;
+    font-family: sans-serif;
+    color: orange;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: static;
+}
 
+div {
+    height: 100%;
+}
 
-@keyframes ambient {
-    0% {
-        
-    }
+.container {
+    padding-top: 5vh;
 }
 
 .row {
-    margin: 10px;
-    padding: 25px;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
 }
 
 p {
-    font-size: 54px;
+    font-size: 36px;
     color: ghostwhite;
-    font-family: "Futura", sans-serif;
-    background-color: transparent;
+    font-family: "Times", sans-serif;
     text-align: center;
 }
 
 span {
-     display: inline-block;
- }
+    display: inline-block;
+}
+
+img {
+    display: inline-block;
+}
+
+.over {
+    display: block;
+    background-color: transparent;
+    padding-left: 15px;
+    position: fixed;
+    animation: float 1.5s ease-in-out infinite alternate;
+}
+
+#float {
+    animation-name: float;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+    justify-content: center;
+}
+
+@keyframes float {
+    0% {
+        transform: rotate3d(20, 0, -20, 45deg);
+    }
+
+    100% {
+        transform: rotate3d(20, 0, 20, 15deg);
+    }
+}
+
+.blur {
+     animation: blur 2s linear infinite alternate;
+}
+
+@keyframes blur {
+    0% {
+        transform: translateY(0);
+        text-shadow:
+            0 0 0 ghostwhite,
+            0 0 0 gray,
+            0 0 0 red;
+    }
+
+    20% {
+        color: azure;
+        transform: translateX(-1px);
+        text-shadow:
+            0 12px 0 ghostwhite,
+            0 -5px 0 10 dimgray,
+            0 -6px 10 red;
+    }
+
+    40% {
+        transform: translateY(1px);
+        text-shadow:
+            0 -12px 0 ghostwhite,
+            0 8px 10 dimgray,
+            0 5px 0 red;
+    }
+
+    60% {
+        transform: translateX(1px);
+        text-shadow:
+            0 2px 0 ghostwhite,
+            0 -2px 0 dimgray,
+            0 -2px 0 red;
+    }
+
+    80% {
+        transform: translateY(-1px);
+        text-shadow:
+            0 0 0 ghostwhite,
+            0 0 0 dimgray,
+            0 0 0 red;
+    }
+}
