--- a/projects/maxims/assets/css/maxim_style_eight.css
+++ b/projects/maxims/assets/css/maxim_style_eight.css
@@ -48,13 +48,13 @@ div {
     animation: text-shadow .5s linear infinite alternate;
     font-size: 56px;
     text-align: center;
-    padding-top: 15vh;
+    padding-top: 30vh;
     background-color: black;
     z-index: 1;
 }
 
 .row:hover .flow {
-    opacity: .10;
+    display: none;
 }
 
 
@@ -62,11 +62,10 @@ div {
     display: block;
     font-size: 24px;
     position: fixed;
-    align-items: center;
-    justify-content: center;
-    bottom: 500;
-    right: 500;
-    width: 1000px;
+    top: 50%;
+    left: 50%;
+    margin-top: -100px;
+    margin-left: -200px;
     z-index: 0;
 }
 
@@ -115,6 +114,7 @@ a:hover {
             0 0 0 #2cfcfd,
             0 0 0 #fb203b,
             0 0 0 #fefc4b;
+        opacity: .9;
     }
 }
 
