--- a/projects/still-life-archive/still-life-styles.css
+++ b/projects/still-life-archive/still-life-styles.css
@@ -22,19 +22,18 @@ html {
 /*YOUR CSS CODE GOES BELOW*/
 
 body {
-    background-color: whitesmoke;
-    height: 100vh;
+    background-color: burlywood;
+    height: 100%;
+    width: 100%;    
 }
 
 .flex-container {
     display: inline-block;
     width: 100%;
     height: 100%;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-    flex-grow: 1;
-    padding: 20px;
 }
 
 #link {
@@ -47,16 +46,31 @@ body {
 a {
     font-family: "Georgia", serif;
     color: black;
-    font-size: 2em;
+    font-size: 30px;
     text-decoration: none;
 }
 
 a:hover {
-    color: lightskyblue;
+    color: gold;
 }
 
 img {
-    height: 20vh;
+    height: 25vh;
+    box-shadow: 0px 10px 5px;
+}
+
+#zoom:hover {
+ 
+    
+}
+
+@keyframes expand {
+    0% {
+        transform: scale(1.0);
+    }
+    100%{
+        transform: scale(5.0);        
+    }
 }
 
 .links {
