--- a/projects/generatorpage/style.css
+++ b/projects/generatorpage/style.css
@@ -27,6 +27,13 @@ div {
   border: 0px solid black;
 }
 
+.checkbox {
+  padding-top:88px;
+  padding-bottom: 2px;
+  margin: 0px;
+  border: 0px solid black;
+}
+
 .side {
   display: block;
   position: relative;
@@ -44,9 +51,23 @@ table {
 
 td,
 th {
-  border: 0px solid black;
   text-align: right;
   padding-bottom: 15px;
+  border: 0px solid black;
+}
+
+.alttable {
+  margin-left: 60px;
+  padding-left: 100px;
+  width: 90px;
+  border: 0px solid black;
+}
+
+.altbox {
+  text-align: left;
+  padding-bottom: 4px;
+  width: 10px;
+  border: 0px solid black;
 }
 
 h1 {
