--- a/styles.css
+++ b/styles.css
@@ -1,150 +1,668 @@
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
+html {
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
 body {
-    padding: 0px;
-    padding-bottom: 20px;
-    margin: 0px;
+    margin: 0;
+    font-family: 'Work Sans', sans-serif;
 }
 
-/* Menu Background*/
-.nav {
-    position: fixed;
-    overflow: hidden;
-    background-color: black;
-    padding: 10px 20px 0px;
-    margin: 0px;
-    width: 100%;
-    z-index: 1000;
-}
-
-.nav h1 {
-    float: left;
-}
-
-.nav a {
-    font-family: 'Bebas Neue', 'sans-serif';
-    font-size: 32px;
-    float: left;
+::-moz-selection {
+    /* Code for Firefox */
     color: white;
-    text-align: center;
-    padding: 10px 0px 0px 40px;
-    text-decoration: none;
-    letter-spacing: 1px;
+    background: #FB3640;
 }
 
-.nav p {
-    font-family: 'Bebas Neue', 'sans-serif';
-    font-size: 32px;
-    float: right;
+::selection {
     color: white;
-    text-align: center;
-    padding: 10px 40px 0px 0px;
-    text-decoration: none;
-    letter-spacing: 1px;
-}
-
-.nav a:hover {
-    color: #F52D0D;
-}
-
-.nav a:active {
-    color: #F52D0D;
-}
-
-#current {
-    color: #F52D0D;
-}
-
-.name {
-    font-size: 50px;
-    letter-spacing: 2px;
-    color: white;
-    margin: 0px;
-    text-align: left;
-    box-shadow: none;
-}
-
-.info {
-    float: right;
-    font-size: 30px;
-    letter-spacing: 2px;
-    color: white;
-    margin: 0px;
-    padding: 0px;
-    text-align: left;
-    box-shadow: none;
+    background: #FB3640;
 }
 
 h1 {
-    font-size: 60px;
-    font-family: 'Bebas Neue', sans-serif;
-    font-weight: 100;
-    box-shadow: 0px 2px;
-    color: black;
-    letter-spacing: 1px;
-    margin: 10px 0px 30px;
+    padding: 0px;
+    margin: 0px;
 }
 
-a {
-    font-size: 18px;
-    font-family: 'Arial', sans-serif;
-    letter-spacing: .3px;
-    color: black;
+/* width */
+::-webkit-scrollbar {
+    width: 14px;
 }
 
-/* Site Content*/
-#header {
-    padding: 78px 60px 15px;
-    font-size: 40px;
-    letter-spacing: 0.2px;
+/* Track */
+::-webkit-scrollbar-track {
+    background: black;
 }
 
-.content {
-    padding-top: 80px;
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #D0D0D0;
 }
 
-.main {
-    font-size: 18px;
-    font-family: 'Arial', sans-serif;
-    color: black;
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #979797;
 }
 
-h2 {
-    font-size: 24px;
-    font-family: 'Arial', sans-serif;
-    color: black;
-    margin-top: 0px;
-    margin-bottom: 3px;
-    letter-spacing: .3px;
-    padding-left: 20px;
+/*Nav Bar*/
+div.nav-container {
+    position: fixed;
+    padding: 1.6vw 0.5vw;
+    width: 15vw;
+    height: 100%;
+    z-index: 3;
+    background-color: #131010;
 }
 
-p {
-    font-size: 18px;
-    font-family: 'Arial', sans-serif;
-    letter-spacing: .3px;
-    margin: 0px 0px 0px;
-    padding-left: 20px;
+h1.nav {
+    font-size: 2.7vw;
+    margin: 0.3vw 0.4vw;
+    padding: 0;
+    line-height: 2.3vw;
+    text-transform: uppercase;
+    color: white;
+}
+
+.nav-container a {
+    color: white;
 }
 
 ul {
-    margin: 0px 0px 10px 0px;
-    padding-left: 30px;
+    list-style-type: none;
+    padding: 0;
+    margin-left: 0.8vw;
+    text-align: left;
+    font-size: 1.3vw;
+    line-height: 1.6vw;
+    color: white;
+}
+
+ul:hover {
+    color: #FB3640;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    position: relative;
+    transition: .2s ease-in-out;
+    cursor: pointer;
+}
+
+a:hover {
+    color: #FB3640;
+}
+
+.underline:hover::before {
+    visibility: visible;
+    width: 100%;
+}
+
+.underline::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #FB3640;
+    visibility: hidden;
+    transition: all 0.3s ease-in-out;
+}
+
+#current {
+    color: #FB3640;
+    text-decoration: none;
+}
+
+/*Content*/
+.container {
+    width: 85%;
+    margin: 0vw 14.9vw;
+    /*    background-color: gainsboro;*/
+}
+
+.gallery {
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(17, 5vw);
+    /*    grid-gap: 1.2rem;*/
+    transition: 0.2s ease;
+}
+
+.gallery__cover {
+    opacity: 0;
+    transition: 0.2s ease;
+    position: relative;
+    background-color: black;
+}
+
+.gallery__cover h1 {
+    text-align: center;
+    position: relative;
+    font-size: 1.7vw;
+    padding-top: 6vw;
+    width: 100%;
+    height: 100%;
+    color: whitesmoke;
+}
+
+.gallery__cover a {
+    position: relative;
+    transition: .3s ease-in-out;
+}
+
+.gallery__cover p {
+    text-align: center;
+    position: relative;
+    top: 25%;
+    font-size: 1vw;
+    margin: 0px;
+    line-height: 0.4;
+}
+
+.gallery__cover:hover {
+    opacity: 1;
+    position: relative;
+}
+
+.gallery__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.gallery__item--1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+
+    /** Alternative Syntax **/
+    /* grid-column: 1 / span 2;  */
+    /* grid-row: 1 / span 2; */
+}
+
+.gallery__item--2 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
+
+    /** Alternative Syntax **/
+    /* grid-column: 3 / span 2;  */
+    /* grid-row: 1 / span 2; */
+}
+
+.gallery__item--3 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 1;
+    grid-row-end: 6;
+
+    /** Alternative Syntax **/
+    /* grid-column: 5 / span 4;
+  grid-row: 1 / span 5; */
+}
+
+.gallery__item--4 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 6;
+
+    /** Alternative Syntax **/
+    /* grid-column: 1 / span 4;  */
+    /* grid-row: 3 / span 3; */
+}
+
+.gallery__item--5 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 6;
+    grid-row-end: 9;
+
+    /** Alternative Syntax **/
+    /* grid-column: 1 / span 4; */
+    /* grid-row: 6 / span 3; */
+}
+
+.gallery__item--6 {
+    grid-column-start: 3;
+    grid-column-end: 7;
+    grid-row-start: 6;
+    grid-row-end: 9;
+
+    /** Alternative Syntax **/
+    /* grid-column: 5 / span 4; */
+    /* grid-row: 6 / span 3; */
+}
+
+.gallery__item--7 {
+    grid-column-start: 7;
+    grid-column-end: 9;
+    grid-row-start: 6;
+    grid-row-end: 9;
+}
+
+.gallery__item--8 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 9;
+    grid-row-end: 15;
+}
+
+.gallery__item--9 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 9;
+    grid-row-end: 12;
+}
+
+.gallery__item--10 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 12;
+    grid-row-end: 15;
+}
+
+.gallery__item--11 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 15;
+    grid-row-end: 18;
+}
+
+.gallery__item--12 {
+    grid-column-start: 3;
+    grid-column-end: 7;
+    grid-row-start: 15;
+    grid-row-end: 18;
+
+    /** Alternative Syntax **/
+    /* grid-column: 5 / span 4; */
+    /* grid-row: 6 / span 3; */
+}
+
+.gallery__item--13 {
+    grid-column-start: 7;
+    grid-column-end: 9;
+    grid-row-start: 15;
+    grid-row-end: 18;
+
+    /** Alternative Syntax **/
+    /* grid-column: 5 / span 4; */
+    /* grid-row: 6 / span 3; */
+}
+
+.personalgallery {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(16, 5vw);
+    /*    grid-gap: 1.2rem;*/
+}
+
+.hyperspan-cover {
+    position: relative;
+    background-color: none;
+}
+
+.hyperspan {
+    transition: 0.2s ease;
+    position: relative;
+    display: block;
+    background-color: none;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 5;
+}
+
+.personalgallery__item--1 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 5;
+
+    /** Alternative Syntax **/
+    /* grid-column: 1 / span 2;  */
+    /* grid-row: 1 / span 2; */
+}
+
+.personalgallery__item--2 {
+    grid-column-start: 5;
+    grid-column-end: 10;
+    grid-row-start: 1;
+    grid-row-end: 5;
+
+    /** Alternative Syntax **/
+    /* grid-column: 3 / span 2;  */
+    /* grid-row: 1 / span 2; */
+}
+
+.personalgallery__item--3 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 5;
+    grid-row-end: 9;
+
+    /** Alternative Syntax **/
+    /* grid-column: 5 / span 4;
+  grid-row: 1 / span 5; */
+}
+
+.personalgallery__item--4 {
+    grid-column-start: 5;
+    grid-column-end: 10;
+    grid-row-start: 5;
+    grid-row-end: 9;
+
+    /** Alternative Syntax **/
+    /* grid-column: 1 / span 4;  */
+    /* grid-row: 3 / span 3; */
+}
+
+.personalgallery__item--5 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 9;
+    grid-row-end: 13;
+
+    /** Alternative Syntax **/
+    /* grid-column: 1 / span 4; */
+    /* grid-row: 6 / span 3; */
+}
+
+.personalgallery__item--6 {
+    grid-column-start: 5;
+    grid-column-end: 10;
+    grid-row-start: 9;
+    grid-row-end: 13;
+
+    /** Alternative Syntax **/
+    /* grid-column: 5 / span 4; */
+    /* grid-row: 6 / span 3; */
+}
+
+.personalgallery__item--7 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 13;
+    grid-row-end: 17;
+}
+
+.personalgallery__item--8 {
+    grid-column-start: 5;
+    grid-column-end: 10;
+    grid-row-start: 13;
+    grid-row-end: 17;
+}
+
+div.content {
+    display: block;
+    position: absolute;
+    margin-top: 1.7vw;
+    padding-left: 3vw;
+    padding-right: 1vw;
+    transition: 0.4s ease;
+}
+
+h1.content {
+    text-transform: uppercase;
+    line-height: 1.8vw;
+    font-size: 1.4vw;
+}
+
+p.content {
+    margin: 0;
+    margin-bottom: 1.5vw;
+    margin-right: 16vw;
+    font-size: 1.2vw;
+    line-height: 1.6vw;
+}
+
+.content a {
+    transition: 0.4s ease;
+}
+
+.content h2 {
+    margin-left: 1.5vw;
+    line-height: 0.5;
+}
+
+.load {
+    position: relative;
+    animation-name: load;
+    animation-duration: 1s;
+}
+
+@keyframes load {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+/*project page content*/
+.flex {
+    position: absolute;
+    margin-top: 1vw;
+    margin-left: 19vw;
+    width: 80vw;
 }
 
 .flex-container {
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    align-items: center;
-    justify-content: center;
-    padding: 20px 20px 40px;
-}
-
-img {
-    margin: 20px;
-    box-shadow: 10px 10px 15px grey;
+    padding-top: .5vw;
+    margin-top: 0;
+    margin-bottom: 3vh;
+    margin-right: 1.5vw;
 }
 
 .desc {
-    padding: 0vw 18vw;
+    left: 20vw;
+    margin-bottom: 2vh;
+}
+
+.desc h1 {
+    font-size: 2vw;
+    text-transform: uppercase;
+}
+
+.desc a {
+    margin-left: 8vw;
+    font-size: 1.2vw;
+}
+
+.center {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    animation-name: load;
+    animation-duration: 1s;
+}
+
+.imagefirst {
+    position: relative;
+    width: 20vw;
+    right: -35%;
+}
+
+.center a {
+    width: 45vw;
+    margin: 0;
+    padding: 0;
+}
+
+.personal a {
+    width: 24vw;
+    margin: 0;
+    padding: 0;
+}
+
+.flex-container img {
+    padding: 0.5vw;
+    transition: 2s ease-in-out;
+}
+
+/* Styles the lightbox, removes it from sight and adds the fade-in transition */
+
+.lightbox-target {
+    position: fixed;
+    top: -100%;
+    width: 100%;
+    width: 100%;
+    opacity: 0;
+    -webkit-transition: opacity .5s ease-in-out;
+    -moz-transition: opacity .5s ease-in-out;
+    -o-transition: opacity .5s ease-in-out;
+    transition: opacity .5s ease-in-out;
+    overflow: auto;
+    z-index: 3;
+}
+
+/* Styles the lightbox image, centers it vertically and horizontally, adds the zoom-in transition and makes it responsive using a combination of margin and absolute positioning */
+
+.lightbox-target img {
+    cursor: zoom-out;
+    margin: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-height: 0%;
+    max-width: 0%;
+    padding: 0;
+    box-shadow: 0px 20px 18px rgba(0, 0, 0, .3);
+    box-sizing: border-box;
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+}
+
+/* Styles the close link, adds the slide down transition */
+
+a.lightbox-close {
+    display: block;
+    width: 50px;
+    height: 50px;
+    box-sizing: border-box;
+    background: black;
+    color: orangered;
+    text-decoration: none;
+    position: absolute;
+    top: -80;
+    right: 0;
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+}
+
+.close {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.cursor {
+    cursor: pointer;
+}
+
+/* Provides part of the "X" to eliminate an image from the close link */
+
+a.lightbox-close:before {
+    content: "";
+    display: block;
+    height: 30px;
+    width: 1px;
+    background: white;
+    position: absolute;
+    left: 26px;
+    top: 10px;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+/* Provides part of the "X" to eliminate an image from the close link */
+
+a.lightbox-close:after {
+    content: "";
+    display: block;
+    height: 30px;
+    width: 1px;
+    background: black;
+    position: absolute;
+    left: 26px;
+    top: 10px;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+/* Uses the :target pseudo-class to perform the animations upon clicking the .lightbox-target anchor */
+
+.lightbox-target:target {
+    opacity: 1;
+    top: 0;
+    bottom: 0;
+}
+
+.lightbox-target:target img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.lightbox-target:target a.lightbox-close {
+    top: 0px;
+}
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 20px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50px;
+}
+
+#myBtn:hover {
+    background-color: firebrick;
 }
